# simple_sedge

./: .gitignore  Makefile  README.md  docker-compose.yml  go.work  go.work.sum
lambda/feed/news-scraping/: Makefile  example.env  main.py  pyproject.toml
lambda/feed/news-scraping/news_scraping/common/: NewsDoc.py
lambda/feed/news-scraping/news_scraping/data_models/: NewsDoc.py  __init__.py
lambda/feed/news-scraping/news_scraping/extract/: __init__.py  selenium_utils.py
lambda/feed/news-scraping/news_scraping/load/: IngestClient.py
lambda/feed/news-scraping/news_scraping/pipeline/: get_docs.py
lambda/feed/news-scraping/news_scraping/processes/: __init__.py  scrape_rss.py
lambda/feed/news-scraping/news_scraping/pulling_data/: news_rss_feeds.py  rss_utils.py
lambda/feed/news-scraping/news_scraping/transform/: __init__.py  accesswire.py  benzinga.py  globe_newswire.py  motley_fool.py  seeking_alpha.py
proto/: Makefile  buf.gen.go.yaml  buf.gen.py.yaml  buf.gen.ts.yaml  buf.work.yaml  go.mod  go.sum  package-lock.json  package.json  pyproject.toml
proto/doc/swagger/apis/v1alpha1/: document.swagger.json  rpc_document.swagger.json  rpc_user.swagger.json  service.swagger.json  user.swagger.json
proto/doc/swagger/processing/: document.swagger.json  rpc_document.swagger.json  service.swagger.json
proto/doc/swagger/processing/v1alpha1/: document.swagger.json  rpc_document.swagger.json  (+2 more)
proto/feed/: buf.yaml
proto/feed/apis/v1alpha1/: document.proto  rpc_document.proto  rpc_user.proto  service.proto  user.proto
proto/feed/processing/v1alpha1/: document.proto  rpc_document.proto  service.proto
proto/feed/webapis/v1alpha1/: service.proto  user.proto  user_rpc.proto
sdk/: Makefile  pyproject.toml
sdk/apis/v1alpha1/: rpc_user_pb2.pyi  service_pb2.py  service_pb2_grpc.py  user_pb2.py  user_pb2.pyi
sdk/processing/v1alpha1/: document_pb2.py  rpc_document_pb2.py  rpc_document_pb2.pyi  service_pb2.py  service_pb2_grpc.py
(+139 files in other folders)
