[tool.poetry]
name = "simplesedge-sdk"
version = "0.1.0"
description = ""
authors = ["jst2702 <jst2702@vt.edu>"]
readme = "README.md"
packages = [
    {include = "simplesedge_sdk"},
    {include = "processing", from = "."}
]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
